--- a/composer.json
+++ b/composer.json
@@ -1,4 +1,31 @@
 {
+    "name": "jagarsoft/testrepo",
+    "description": "Test Repositoty",
+    "type": "library",
+    "license": "GPL-2.0-only",
+    "authors": [
+        {
+            "name": "Javier Garrido",
+            "email": "jagarsoft2000@gmail.com",
+            "role": "Developer"
+        }
+    ],
+
+    "require": {
+      "php": "^8.0"
+    },
+
+    "autoload": {
+        "psr-4": {
+            "jagarsoft\\TestRepo\\": "src/"
+        }
+    },
+    "autoload-dev": {
+        "psr-4": {
+            "jagarsoft\\TestRepo\\Stubs\\": "tests/Stubs/"
+        }
+    },
+
     "require-dev": {
         "phpunit/phpunit": "^9.5"
     }
