--- a/.scrutinizer.yml
+++ b/.scrutinizer.yml
@@ -7,3 +7,7 @@ build:
             coverage:
               file: coverage-report/coverage.xml
               format: clover
+checks:
+    php:
+        code_rating: true
+		
